--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "node-sass": "^4.9.4",
     "open-color": "^1.6.3",
     "react": "^16.6.0",
+    "react-cookie": "^3.0.4",
     "react-dom": "^16.6.0",
     "react-js-pagination": "^3.0.2",
     "react-paginate": "^5.2.4",
     "react-responsive-modal": "^3.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "reactstrap": "^6.5.0",
     "react-slick": "^0.23.2",
+    "reactstrap": "^6.5.0",
     "sass-loader": "^7.1.0",
     "styled-components": "^4.0.2",
     "yarn": "^1.10.1"
