--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "base64-img": "^1.0.4",
     "formsy-react": "^1.1.5",
     "informed": "^1.10.7",
     "lodash": "^4.17.11",
@@ -16,8 +17,8 @@
     "react-responsive-modal": "^3.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "reactstrap": "^6.5.0",
     "react-slick": "^0.23.2",
+    "reactstrap": "^6.5.0",
     "sass-loader": "^7.1.0",
     "styled-components": "^4.0.2",
     "yarn": "^1.10.1"
