--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "formsy-react": "^1.1.5",
     "informed": "^1.10.7",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.4",
     "open-color": "^1.6.3",
     "react": "^16.6.0",
