--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "formsy-react": "^1.1.5",
     "informed": "^1.10.7",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.4",
     "open-color": "^1.6.3",
     "react": "^16.6.0",
     "react-cookie": "^3.0.4",
     "react-dom": "^16.6.0",
     "react-js-pagination": "^3.0.2",
+    "react-moment": "^0.8.3",
     "react-paginate": "^5.2.4",
     "react-responsive-modal": "^3.5.0",
     "react-router-dom": "^4.3.1",
